# FAIR

./: .env.example  .gitignore  033 Modelo de Plan de Trabajo para Grupo de Investigación.docx  =1.0.0  ARTIFACTS_ANALYSIS.md  ASSIGNMENTS_ARTIFACTS_SUBMISSIONS_ANALYSIS.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  api-communications.md  build.sh  double_pendulum_simulation.tsx  fair_chat_conversation_taxonomy.html  mkdocs.yml  package-lock.json  package.json  pr-todo.md  pyproject.toml  pytest.ini  skills-lock.json
.github/: copilot-instructions.md
ai-docs/: ARCHITECTURE_MAP.md
api-plan/: actions-protocol.md  api-auth.md  api-communications.md  extension-api-v2-proposal.md  extensions-workflow-handoff.md  new-settings-schema.md  sdk-idea.md  sdk.md
backend/: main.py  pyproject.toml
cli/: main.py
docs/: README.md  astro.config.mjs  docs.json  package.json  style.css
frontend-dev/: DEV.md  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.mjs
plans/: 001-fix-courses-hook-order.md  002-fix-chat-hook-order.md  003-harden-auth-session.md  004-stabilize-execution-streaming.md  005-add-route-bundle-boundaries.md  006-serialize-settings-updates.md  007-fix-core-accessibility.md  008-align-canonical-frontend.md  README.md
platform/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.mts
scripts/: e2e_chat_demo.py  e2e_flow_demo.py  generate_openapi.py  mock_extension.py  orphan_cleanup.py  sync_version.py
specs/: artifacts.md  extension-execution-protocol.md  refresh-tokens.md  state-injection.md
tests/: TODO.md  conftest.py  execution_protocol_helpers.py  sdk.py  test_ai_service.py  test_artifact_api.py  test_artifact_download.py  test_artifact_lifecycle.py  test_artifact_permissions.py  test_artifact_v2_api.py  test_atomic_assignment_creation.py  test_atomic_submission_creation.py  test_auth_integration.py  test_backend_startup_migrations.py  test_cli_commands.py  test_communications_flow.py  test_database_url_normalization.py  test_email_provider.py  test_enhanced_artifacts.py  test_enrollments.py  (+53 more)
(+604 files in other folders)
