[project]
name = "fair-platform"
version = "0.1.0"
description = "Fair Platform CLI Wrapper"
authors = [{name = "Allan Zapata", email = "allan.zapata@up.ac.pa" }]
readme = "README.md"
requires-python = ">=3.12" # I should probably change this
dependencies = [
    "dotenv>=0.9.9",
    "sqlalchemy>=2.0.43",
    "typer[all]>=0.9.0",
]

[project.scripts]
fair = "cli.main:app"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*"]

