[project]
name = "fair-platform"
version = "0.1.0"
description = "Fair Platform CLI Wrapper"
authors = [{name = "Allan Zapata", email = "allan.zapata@up.ac.pa" }]
readme = "README.md"
requires-python = ">=3.12" # I should probably change this
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "pydantic[email]>=2.11.7",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.43",
    "typer>=0.17.4",
    "uvicorn>=0.35.0",
]

[project.scripts]
fair = "fair_platform.cli.main:app"
fair-backend = "fair_platform.backend.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
